# ai-cfo-phoenix-v2

./: .gitignore  ASSISTANT_GUIDE.md  ASSISTANT_SUMMARY.md  CHANGELOG.md  CHANGELOG_CORRECTIONS.md  CORRECTIONS_BACKEND.md  DEPLOYMENT_GUIDE.md  EXPERT_EVALUATION.md  GUIDE_AGENTS_SSH.md  GUIDE_DEPLOIEMENT_RAPIDE.md  MIGRATION_PREEMBEDDED.md  MODIFICATIONS_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUICKSTART.md  README.md  README_v2.md  SSH_TESTING_GUIDE.md  docker-compose.yml  start-ai-cfo.ps1  start-backend.sh  test-ai-cfo.ps1
backend/: .env.example  Dockerfile  load_documentation.py  load_preembedded_docs.py  main.py  main.py.bak  main_original.py  main_simple.py  pyproject.toml  pytest.ini  requirements.txt  requirements_preembedded.txt  requirements_simple.txt
backend/agents/: agent_system.py  agent_system_old.py  agent_system_v2.py  agent_templates.py  dynamic_agent_system.py  meta_orchestrator.py  multilingual_prompts.py
backend/api/: __init__.py
backend/api/v1/: api.py
backend/api/v1/endpoints/: agents.py  assistant.py  auth.py  chat.py  history.py  ingestion.py  monitoring.py  optimized_ingestion.py  oracle_cfo.py  preembedded_ingestion.py
backend/core/: auth.py  config.py  database.py  security.py
backend/models/: api_models.py  database.py  document.py  history.py
backend/scripts/: start_backend.sh
backend/services/: assistant_service.py  document_service.py  history_service.py  i18n_service.py  ingestion_service.py  monitoring_service.py  openrouter_service.py  optimized_rag_service.py  preembedded_rag_service.py  rag_service.py  resilience_service.py  ssh_agent_service.py
backend/tests/: test_agents.py  test_api_integration.py  test_ssh_service.py
docs/: AMELIORATIONS_IMPLEMENTEES.md  PHOENIX_V3_GUIDE_COMPLET.md  PHOENIX_V3_SYNTHESE.md  RAG_OPTIMISE_GUIDE.md
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatAssistant.tsx  HistoryPanel.tsx  LanguageSelector.tsx  LoadingScreen.tsx  ProtectedRoute.tsx  Sidebar.tsx
frontend/src/hooks/: useAuth.ts  useDocuments.ts  useGSAP.ts  useHistory.ts
frontend/src/i18n/: I18nContext.tsx  translations.ts
frontend/src/pages/: Admin.tsx  AdminAgents.tsx  Dashboard.tsx  Documents.tsx  Explore.tsx  Login.tsx  (+3 more)
(+8 files in other folders)
